yarc/parser/v4/.antlr/YarcParser.py
# Generated from /media/federico/Data_Hdd/University/Magistrale/Secondo_Anno/LFC/Progetto/yarc/yarc/parser/v4/YarcParser.g4 by ANTLR 4.9.2
import sys
from io import StringIO

from antlr4 import *

if sys.version_info[1] > 5:
    from typing import TextIO
else:
    from typing.io import TextIO

if __name__ is not None and "." in __name__:
    from .YarcParserBase import YarcParserBase
else:
    from YarcParserBase import YarcParserBase




class YarcParser(YarcParserBase):
    grammarFileName = "YarcParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [DFA(ds, i) for i, ds in enumerate(atn.decisionToState)]

    sharedContextCache = PredictionContextCache()

    literalNames = [
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'and'",
        "'as'",
        "'assert'",
        "'async'",
        "'await'",
        "'break'",
        "'case'",
        "'class'",
        "'continue'",
        "'def'",
        "'del'",
        "'elif'",
        "'else'",
        "'except'",
        "'False'",
        "'finally'",
        "'for'",
        "'from'",
        "'global'",
        "'if'",
        "'import'",
        "'in'",
        "'is'",
        "'lambda'",
        "'match'",
        "'None'",
        "'nonlocal'",
        "'not'",
        "'or'",
        "'pass'",
        "'raise'",
        "'return'",
        "'True'",
        "'try'",
        "'_'",
        "'while'",
        "'with'",
        "'yield'",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "<INVALID>",
        "'.'",
        "'...'",
        "'*'",
        "'('",
        "')'",
        "','",
        "':'",
        "';'",
        "'**'",
        "'='",
        "'['",
        "']'",
        "'|'",
        "'^'",
        "'&'",
        "'<<'",
        "'>>'",
        "'+'",
        "'-'",
        "'/'",
        "'%'",
        "'//'",
        "'~'",
        "'{'",
        "'}'",
        "'<'",
        "'>'",
        "'=='",
        "'>='",
        "'<='",
        "'<>'",
        "'!='",
        "'@'",
        "'->'",
        "'+='",
        "'-='",
        "'*='",
        "'@='",
        "'/='",
        "'%='",
        "'&='",
        "'|='",
        "'^='",
        "'<<='",
        "'>>='",
        "'**='",
        "'//='",
    ]

    symbolicNames = [
        "<INVALID>",
        "INDENT",
        "DEDENT",
        "STRING",
        "NUMBER",
        "INTEGER",
        "AND",
        "AS",
        "ASSERT",
        "ASYNC",
        "AWAIT",
        "BREAK",
        "CASE",
        "CLASS",
        "CONTINUE",
        "DEF",
        "DEL",
        "ELIF",
        "ELSE",
        "EXCEPT",
        "FALSE",
        "FINALLY",
        "FOR",
        "FROM",
        "GLOBAL",
        "IF",
        "IMPORT",
        "IN",
        "IS",
        "LAMBDA",
        "MATCH",
        "NONE",
        "NONLOCAL",
        "NOT",
        "OR",
        "PASS",
        "RAISE",
        "RETURN",
        "TRUE",
        "TRY",
        "UNDERSCORE",
        "WHILE",
        "WITH",
        "YIELD",
        "NEWLINE",
        "NAME",
        "STRING_LITERAL",
        "BYTES_LITERAL",
        "DECIMAL_INTEGER",
        "OCT_INTEGER",
        "HEX_INTEGER",
        "BIN_INTEGER",
        "FLOAT_NUMBER",
        "IMAG_NUMBER",
        "DOT",
        "ELLIPSIS",
        "STAR",
        "OPEN_PAREN",
        "CLOSE_PAREN",
        "COMMA",
        "COLON",
        "SEMI_COLON",
        "POWER",
        "ASSIGN",
        "OPEN_BRACK",
        "CLOSE_BRACK",
        "OR_OP",
        "XOR",
        "AND_OP",
        "LEFT_SHIFT",
        "RIGHT_SHIFT",
        "ADD",
        "MINUS",
        "DIV",
        "MOD",
        "IDIV",
        "NOT_OP",
        "OPEN_BRACE",
        "CLOSE_BRACE",
        "LESS_THAN",
        "GREATER_THAN",
        "EQUALS",
        "GT_EQ",
        "LT_EQ",
        "NOT_EQ_1",
        "NOT_EQ_2",
        "AT",
        "ARROW",
        "ADD_ASSIGN",
        "SUB_ASSIGN",
        "MULT_ASSIGN",
        "AT_ASSIGN",
        "DIV_ASSIGN",
        "MOD_ASSIGN",
        "AND_ASSIGN",
        "OR_ASSIGN",
        "XOR_ASSIGN",
        "LEFT_SHIFT_ASSIGN",
        "RIGHT_SHIFT_ASSIGN",
        "POWER_ASSIGN",
        "IDIV_ASSIGN",
        "SKIP_",
        "UNKNOWN_CHAR",
    ]

    RULE_single_input = 0
    RULE_file_input = 1
    RULE_eval_input = 2
    RULE_decorator = 3
    RULE_decorators = 4
    RULE_decorated = 5
    RULE_async_funcdef = 6
    RULE_funcdef = 7
    RULE_parameters = 8
    RULE_typedargslist = 9
    RULE_tfpdef = 10
    RULE_varargslist = 11
    RULE_vfpdef = 12
    RULE_stmt = 13
    RULE_simple_stmts = 14
    RULE_simple_stmt = 15
    RULE_expr_stmt = 16
    RULE_annassign = 17
    RULE_testlist_star_expr = 18
    RULE_augassign = 19
    RULE_del_stmt = 20
    RULE_pass_stmt = 21
    RULE_flow_stmt = 22
    RULE_break_stmt = 23
    RULE_continue_stmt = 24
    RULE_return_stmt = 25
    RULE_yield_stmt = 26
    RULE_raise_stmt = 27
    RULE_import_stmt = 28
    RULE_import_name = 29
    RULE_import_from = 30
    RULE_import_as_name = 31
    RULE_dotted_as_name = 32
    RULE_import_as_names = 33
    RULE_dotted_as_names = 34
    RULE_dotted_name = 35
    RULE_global_stmt = 36
    RULE_nonlocal_stmt = 37
    RULE_assert_stmt = 38
    RULE_compound_stmt = 39
    RULE_async_stmt = 40
    RULE_if_stmt = 41
    RULE_while_stmt = 42
    RULE_for_stmt = 43
    RULE_try_stmt = 44
    RULE_with_stmt = 45
    RULE_with_item = 46
    RULE_except_clause = 47
    RULE_block = 48
    RULE_match_stmt = 49
    RULE_subject_expr = 50
    RULE_star_named_expressions = 51
    RULE_star_named_expression = 52
    RULE_case_block = 53
    RULE_guard = 54
    RULE_patterns = 55
    RULE_pattern = 56
    RULE_as_pattern = 57
    RULE_or_pattern = 58
    RULE_closed_pattern = 59
    RULE_literal_pattern = 60
    RULE_literal_expr = 61
    RULE_complex_number = 62
    RULE_signed_number = 63
    RULE_signed_real_number = 64
    RULE_real_number = 65
    RULE_imaginary_number = 66
    RULE_capture_pattern = 67
    RULE_pattern_capture_target = 68
    RULE_wildcard_pattern = 69
    RULE_value_pattern = 70
    RULE_attr = 71
    RULE_name_or_attr = 72
    RULE_group_pattern = 73
    RULE_sequence_pattern = 74
    RULE_open_sequence_pattern = 75
    RULE_maybe_sequence_pattern = 76
    RULE_maybe_star_pattern = 77
    RULE_star_pattern = 78
    RULE_mapping_pattern = 79
    RULE_items_pattern = 80
    RULE_key_value_pattern = 81
    RULE_double_star_pattern = 82
    RULE_class_pattern = 83
    RULE_positional_patterns = 84
    RULE_keyword_patterns = 85
    RULE_keyword_pattern = 86
    RULE_test = 87
    RULE_test_nocond = 88
    RULE_lambdef = 89
    RULE_lambdef_nocond = 90
    RULE_or_test = 91
    RULE_and_test = 92
    RULE_not_test = 93
    RULE_comparison = 94
    RULE_comp_op = 95
    RULE_star_expr = 96
    RULE_expr = 97
    RULE_xor_expr = 98
    RULE_and_expr = 99
    RULE_shift_expr = 100
    RULE_arith_expr = 101
    RULE_term = 102
    RULE_factor = 103
    RULE_power = 104
    RULE_atom_expr = 105
    RULE_atom = 106
    RULE_name = 107
    RULE_testlist_comp = 108
    RULE_trailer = 109
    RULE_subscriptlist = 110
    RULE_subscript_ = 111
    RULE_sliceop = 112
    RULE_exprlist = 113
    RULE_testlist = 114
    RULE_dictorsetmaker = 115
    RULE_classdef = 116
    RULE_arglist = 117
    RULE_argument = 118
    RULE_comp_iter = 119
    RULE_comp_for = 120
    RULE_comp_if = 121
    RULE_encoding_decl = 122
    RULE_yield_expr = 123
    RULE_yield_arg = 124
    RULE_strings = 125

    ruleNames = [
        "single_input",
        "file_input",
        "eval_input",
        "decorator",
        "decorators",
        "decorated",
        "async_funcdef",
        "funcdef",
        "parameters",
        "typedargslist",
        "tfpdef",
        "varargslist",
        "vfpdef",
        "stmt",
        "simple_stmts",
        "simple_stmt",
        "expr_stmt",
        "annassign",
        "testlist_star_expr",
        "augassign",
        "del_stmt",
        "pass_stmt",
        "flow_stmt",
        "break_stmt",
        "continue_stmt",
        "return_stmt",
        "yield_stmt",
        "raise_stmt",
        "import_stmt",
        "import_name",
        "import_from",
        "import_as_name",
        "dotted_as_name",
        "import_as_names",
        "dotted_as_names",
        "dotted_name",
        "global_stmt",
        "nonlocal_stmt",
        "assert_stmt",
        "compound_stmt",
        "async_stmt",
        "if_stmt",
        "while_stmt",
        "for_stmt",
        "try_stmt",
        "with_stmt",
        "with_item",
        "except_clause",
        "block",
        "match_stmt",
        "subject_expr",
        "star_named_expressions",
        "star_named_expression",
        "case_block",
        "guard",
        "patterns",
        "pattern",
        "as_pattern",
        "or_pattern",
        "closed_pattern",
        "literal_pattern",
        "literal_expr",
        "complex_number",
        "signed_number",
        "signed_real_number",
        "real_number",
        "imaginary_number",
        "capture_pattern",
        "pattern_capture_target",
        "wildcard_pattern",
        "value_pattern",
        "attr",
        "name_or_attr",
        "group_pattern",
        "sequence_pattern",
        "open_sequence_pattern",
        "maybe_sequence_pattern",
        "maybe_star_pattern",
        "star_pattern",
        "mapping_pattern",
        "items_pattern",
        "key_value_pattern",
        "double_star_pattern",
        "class_pattern",
        "positional_patterns",
        "keyword_patterns",
        "keyword_pattern",
        "test",
        "test_nocond",
        "lambdef",
        "lambdef_nocond",
        "or_test",
        "and_test",
        "not_test",
        "comparison",
        "comp_op",
        "star_expr",
        "expr",
        "xor_expr",
        "and_expr",
        "shift_expr",
        "arith_expr",
        "term",
        "factor",
        "power",
        "atom_expr",
        "atom",
        "name",
        "testlist_comp",
        "trailer",
        "subscriptlist",
        "subscript_",
        "sliceop",
        "exprlist",
        "testlist",
        "dictorsetmaker",
        "classdef",
        "arglist",
        "argument",
        "comp_iter",
        "comp_for",
        "comp_if",
        "encoding_decl",
        "yield_expr",
        "yield_arg",
        "strings",
    ]

    EOF = Token.EOF
    INDENT = 1
    DEDENT = 2
    STRING = 3
    NUMBER = 4
    INTEGER = 5
    AND = 6
    AS = 7
    ASSERT = 8
    ASYNC = 9
    AWAIT = 10
    BREAK = 11
    CASE = 12
    CLASS = 13
    CONTINUE = 14
    DEF = 15
    DEL = 16
    ELIF = 17
    ELSE = 18
    EXCEPT = 19
    FALSE = 20
    FINALLY = 21
    FOR = 22
    FROM = 23
    GLOBAL = 24
    IF = 25
    IMPORT = 26
    IN = 27
    IS = 28
    LAMBDA = 29
    MATCH = 30
    NONE = 31
    NONLOCAL = 32
    NOT = 33
    OR = 34
    PASS = 35
    RAISE = 36
    RETURN = 37
    TRUE = 38
    TRY = 39
    UNDERSCORE = 40
    WHILE = 41
    WITH = 42
    YIELD = 43
    NEWLINE = 44
    NAME = 45
    STRING_LITERAL = 46
    BYTES_LITERAL = 47
    DECIMAL_INTEGER = 48
    OCT_INTEGER = 49
    HEX_INTEGER = 50
    BIN_INTEGER = 51
    FLOAT_NUMBER = 52
    IMAG_NUMBER = 53
    DOT = 54
    ELLIPSIS = 55
    STAR = 56
    OPEN_PAREN = 57
    CLOSE_PAREN = 58
    COMMA = 59
    COLON = 60
    SEMI_COLON = 61
    POWER = 62
    ASSIGN = 63
    OPEN_BRACK = 64
    CLOSE_BRACK = 65
    OR_OP = 66
    XOR = 67
    AND_OP = 68
    LEFT_SHIFT = 69
    RIGHT_SHIFT = 70
    ADD = 71
    MINUS = 72
    DIV = 73
    MOD = 74
    IDIV = 75
    NOT_OP = 76
    OPEN_BRACE = 77
    CLOSE_BRACE = 78
    LESS_THAN = 79
    GREATER_THAN = 80
    EQUALS = 81
    GT_EQ = 82
    LT_EQ = 83
    NOT_EQ_1 = 84
    NOT_EQ_2 = 85
    AT = 86
    ARROW = 87
    ADD_ASSIGN = 88
    SUB_ASSIGN = 89
    MULT_ASSIGN = 90
    AT_ASSIGN = 91
    DIV_ASSIGN = 92
    MOD_ASSIGN = 93
    AND_ASSIGN = 94
    OR_ASSIGN = 95
    XOR_ASSIGN = 96
    LEFT_SHIFT_ASSIGN = 97
    RIGHT_SHIFT_ASSIGN = 98
    POWER_ASSIGN = 99
    IDIV_ASSIGN = 100
    SKIP_ = 101
    UNKNOWN_CHAR = 102

    def __init__(self, input: TokenStream, output: TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(
            self, self.atn, self.decisionsToDFA, self.sharedContextCache
        )
        self._predicates = None

    class Single_inputContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(YarcParser.NEWLINE, 0)

        def simple_stmts(self):
            return self.getTypedRuleContext(YarcParser.Simple_stmtsContext, 0)

        def compound_stmt(self):
            return self.getTypedRuleContext(YarcParser.Compound_stmtContext, 0)

        def getRuleIndex(self):
            return YarcParser.RULE_single_input

    def single_input(self):
        localctx = YarcParser.Single_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_single_input)
        try:
            self.state = 257
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input, 0, self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 252
                self.match(YarcParser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 253
                self.simple_stmts()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 254
                self.compound_stmt()
                self.state = 255
                self.match(YarcParser.NEWLINE)
                pass

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class File_inputContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(YarcParser.EOF, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(YarcParser.NEWLINE)
            else:
                return self.getToken(YarcParser.NEWLINE, i)

        def stmt(self, i: int = None):
            if i is None:
                return self.getTypedRuleContexts(YarcParser.StmtContext)
            else:
                return self.getTypedRuleContext(YarcParser.StmtContext, i)

        def getRuleIndex(self):
            return YarcParser.RULE_file_input

    def file_input(self):
        localctx = YarcParser.File_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_file_input)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 263
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (
                ((_la) & ~0x3F) == 0
                and (
                    (1 << _la)
                    & (
                        (1 << YarcParser.STRING)
                        | (1 << YarcParser.NUMBER)
                        | (1 << YarcParser.ASSERT)
                        | (1 << YarcParser.ASYNC)
                        | (1 << YarcParser.AWAIT)
                        | (1 << YarcParser.BREAK)
                        | (1 << YarcParser.CLASS)
                        | (1 << YarcParser.CONTINUE)
                        | (1 << YarcParser.DEF)
                        | (1 << YarcParser.DEL)
                        | (1 << YarcParser.FALSE)
                        | (1 << YarcParser.FOR)
                        | (1 << YarcParser.FROM)
                        | (1 << YarcParser.GLOBAL)
                        | (1 << YarcParser.IF)
                        | (1 << YarcParser.IMPORT)
                        | (1 << YarcParser.LAMBDA)
                        | (1 << YarcParser.MATCH)
                        | (1 << YarcParser.NONE)
                        | (1 << YarcParser.NONLOCAL)
                        | (1 << YarcParser.NOT)
                        | (1 << YarcParser.PASS)
                        | (1 << YarcParser.RAISE)
                        | (1 << YarcParser.RETURN)
                        | (1 << YarcParser.TRUE)
                        | (1 << YarcParser.TRY)
                        | (1 << YarcParser.UNDERSCORE)
                        | (1 << YarcParser.WHILE)
                        | (1 << YarcParser.WITH)
                        | (1 << YarcParser.YIELD)
                        | (1 << YarcParser.NEWLINE)
                        | (1 << YarcParser.NAME)
                        | (1 << YarcParser.ELLIPSIS)
                        | (1 << YarcParser.STAR)
                        | (1 << YarcParser.OPEN_PAREN)
                    )
                )
                != 0
            ) or (
                ((_la - 64) & ~0x3F) == 0
                and (
                    (1 << (_la - 64))
                    & (
                        (1 << (YarcParser.OPEN_BRACK - 64))
                        | (1 << (YarcParser.ADD - 64))
                        | (1 << (YarcParser.MINUS - 64))
                        | (1 << (YarcParser.NOT_OP - 64))
                        | (1 << (YarcParser.OPEN_BRACE - 64))
                        | (1 << (YarcParser.AT - 64))
                    )
                )
                != 0
            ):
                self.state = 261
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [YarcParser.NEWLINE]:
                    self.state = 259
                    self.match(YarcParser.NEWLINE)
                    pass
                elif token in [
                    YarcParser.STRING,
                    YarcParser.NUMBER,
                    YarcParser.ASSERT,
                    YarcParser.ASYNC,
                    YarcParser.AWAIT,
                    YarcParser.BREAK,
                    YarcParser.CLASS,
                    YarcParser.CONTINUE,
                    YarcParser.DEF,
                    YarcParser.DEL,
                    YarcParser.FALSE,
                    YarcParser.FOR,
                    YarcParser.FROM,
                    YarcParser.GLOBAL,
                    YarcParser.IF,
                    YarcParser.IMPORT,
                    YarcParser.LAMBDA,
                    YarcParser.MATCH,
                    YarcParser.NONE,
                    YarcParser.NONLOCAL,
                    YarcParser.NOT,
                    YarcParser.PASS,
                    YarcParser.RAISE,
                    YarcParser.RETURN,
                    YarcParser.TRUE,
                    YarcParser.TRY,
                    YarcParser.UNDERSCORE,
                    YarcParser.WHILE,
                    YarcParser.WITH,
                    YarcParser.YIELD,
                    YarcParser.NAME,
                    YarcParser.ELLIPSIS,
                    YarcParser.STAR,
                    YarcParser.OPEN_PAREN,
                    YarcParser.OPEN_BRACK,
                    YarcParser.ADD,
                    YarcParser.MINUS,
                    YarcParser.NOT_OP,
                    YarcParser.OPEN_BRACE,
                    YarcParser.AT,
                ]:
                    self.state = 260
                    self.stmt()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 265
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 266
            self.match(YarcParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Eval_inputContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def testlist(self):
            return self.getTypedRuleContext(YarcParser.TestlistContext, 0)

        def EOF(self):
            return self.getToken(YarcParser.EOF, 0)

        def NEWLINE(self, i: int = None):
            if i is None:
                return self.getTokens(YarcParser.NEWLINE)
            else:
                return self.getToken(YarcParser.NEWLINE, i)

        def getRuleIndex(self):
            return YarcParser.RULE_eval_input

    def eval_input(self):
        localctx = YarcParser.Eval_inputContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_eval_input)
        self._la = 0  # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 268
            self.testlist()
            self.state = 272
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la == YarcParser.NEWLINE:
                self.state = 269
                self.match(YarcParser.NEWLINE)
                self.state = 274
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 275
            self.match(YarcParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DecoratorContext(ParserRuleContext):
        __slots__ = "parser"

        def __init__(
            self, parser, parent: ParserRuleContext = None, invokingState: int = -1
        ):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AT(self):
            return self.getToken(YarcParser.AT, 0)

        def dotted_name(self):
            return self.getTypedRuleContext(YarcParser.Dotted_nameContext, 0)

        def NEWLINE(self):
            return self.getToken(YarcParser.NEWLINE, 0)

        def OPEN_PAREN(self):
            return self.getToken(YarcParser.OPEN_PAREN, 0)

        def CLOSE_PAREN(self):
            return self.getToken(YarcParser.CLOSE_PAREN, 0)

        def arglist(self):
            return self.getTypedRuleContext(YarcParser.ArglistContext, 0)

        def getRuleIndex(self):
            return YarcParser.RULE_decorator
